--- a/_css/estiloCliente.css
+++ b/_css/estiloCliente.css
@@ -1,122 +1,128 @@
-body{
 
+
+body {
     background-color: orange;
     color: bisque; 
     text-align: center;
 }
-
-#codigo{
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-
+body h1{
+    color: bisque;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
 }
 
-#descrição{
-
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-}
-
-#nomeDoProduto{
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-}
-
-#codBarras{
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-}
-
-#unMedida{
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-}
-
-#vCusto{
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-}
-
-#qtdeMin{
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-}
-#qtdeMax{
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-}
-
-#grupo{
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-}
-#idFabricante{
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-}
-#mgLucro{
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-}
-#vVenda{
-    margin: auto;;
-    width: 450px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    text-align: center;
-}
-p{
-    margin: 10px;
-    text-align: center;
-    font-size: 20px;
+nav li{
     
+    background-color: #dddddd;
+    padding: 0px; 
+    margin: 4px;
+    
+ }
+ nav ul{
+    
+    text-transform: unset;
+    background-color: white;  
 }
-input:hover{
+ nav li:hover {
+    background-color: yellow;
+    color: white;
+    transition: background-color 1s;
+    text-decoration: underline;
+}
 
-    background-color: rgb(216, 214, 214);
+
+#inputName{
+    margin: auto;;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+}
+#inputCpf{
+    margin:auto ;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+}
+#inputNasc{
+    margin:auto ;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+}
+#inputTel1{
+    margin:auto ;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+}
+#inputTel2{
+    margin:auto ;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+}
+#inputEmail{
+    margin:auto ;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+}
+#inputCep{
+    margin:auto ;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+}
+#inputRua{
+    margin:auto ;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+}
+#inputNum{
+    margin:auto ;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+}
+#inputBairro{
+    margin:auto ;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+}
+#inputCidade{
+    margin:auto ;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+}
+#Estado{
+    margin-top: 0px;
+    width: 450px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
 }
