--- a/_css/estiloFornecedor.css
+++ b/_css/estiloFornecedor.css
@@ -1,71 +1,142 @@
-#cabecalhoFornecedor{
 
-    position: relative;
-    margin: 0 auto;
+body h1{
+    color: bisque;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
+}
+
+
+#inputCodigo{
+    
+    width: 450px;
+    height: 35px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+    margin: auto;
+
+}
+
+
+
+#inputcnpj{
+
+    margin: auto;
+    width: 450px;
+    height: 35px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+
+}
+#inputInscri{
+
+    margin-top: 0px;
+    margin: auto;
+    width: 450px;
+    height: 35px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+
+}
+
+#inputEmpre{
+
+    margin: auto;
+    width: 450px;
+    height: 35px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
+    
+}
+#inputFantasia{
+
+    margin: auto;
+    width: 1020px;
+    height: 35px;
+    border: none;
+    border-radius: 20px;
+    text-align: center;
     
 }
 
 
 
-#cnpj{
-
-    margin-top: 10px;
-    width: 250px;
-    height: 35px;
-    border: none;
-    border-radius: 7px;
-
-}
-
-#nameCompany{
-
-    margin-top: 10px;
-    width: 400px;
-    height: 35px;
-    border: none;
-    border-radius: 7px;
+#inputLogradouro{
     
-}
-
-#inscEstadual{
-
-    margin-top: 10px;
-    width: 250px;
+    margin: auto;
+    width: 450px;
     height: 35px;
     border: none;
-    border-radius: 7px;
+    border-radius: 20px;
+    text-align: center;
 
 }
 
-#street{
-
-    margin-top: 10px;
-    width: 500px;
+#inputNumero{
+    margin: auto;
+    width: 450px;
     height: 35px;
     border: none;
-    border-radius: 7px;  
-
+    border-radius: 20px;  
+    text-align: center;
 }
 
-#nbBuilding{
-
-    margin-top: 10px;
-    width: 100px;
+#inputComplemento{
+    margin: auto;
+    width: 450px;
     height: 35px;
     border: none;
-    border-radius: 7px;  
+    border-radius: 20px;  
+    text-align: center;
+}
+#inputCEP{
+    margin: auto;
+    width: 450px;
+    height: 35px;
+    border: none;
+    border-radius: 20px; 
+    text-align: center;
+    }
 
+#inputBairro{
+    margin: auto;
+    width: 450px;
+    height: 35px;
+    border: none;
+    border-radius: 20px;  
+    text-align: center;
 }
 
-#cep{
-
-    margin-top: 10px;
-    width: 150
-    px;
+#inputMunicipio{
+    margin: auto;
+    width: 450px;
     height: 35px;
     border: none;
-    border-radius: 7px;
+    border-radius: 20px;  
+    text-align: center;
+}
 
+
+
+
+#uf{
+    margin: auto;
+    width: 450px;
+    height: 35px;
+    border: none;
+    border-radius: 20px;  
+    text-align: auto;
+}
+
+#inputTelefone{
+    margin: auto;
+    width: 450px;
+    height: 35px;
+    border: none;
+    border-radius: 20px; 
+    text-align: center;
 }
 
 input:hover{
@@ -74,9 +145,30 @@ input:hover{
     
 }
 
-p{
-    margin: 10px;
-    text-align: center;
-    font-size: 20px;
+nav li{
+
+    display: inline-block;
+    background-color: #dddddd;
+    padding: 3px; 
+    margin: 4px;
     
+ }
+ nav li:hover {
+    background-color: #606060;
+    color: white;
+    transition: background-color 1s;
 }
+nav#textoNavbar a:hover{
+    
+    text-decoration: underline;
+}
+.addFornecedor{
+    margin: auto;
+    width: auto;
+    height: 35px;
+    border: none;
+    border-radius: 10px; 
+    text-align: center;
+    background-color: white;
+}
+
