--- a/_css/index.css
+++ b/_css/index.css
@@ -1,25 +1,83 @@
 @charset "utf-8";
 body {
     background-color: orange;
-    color: bisque;
+    color: bisque; 
+}
+
+figure.foto-legenda{
+    position: relative;
+    border: 10px solid orange;
+    box-shadow: 0.5px 0.5px 1px black;
+}
+figure.foto-legenda img{
+    position: relative;
+    min-width: 100%;
+   min-width: 100%;
+}
+
+
+figure.foto-legenda figcaption{
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: white;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    transition: opacity 1s;
+    
+    
+}
+figure.foto-legenda:hover figcaption{
+    opacity: 1;
 }
 
 header#cabecalho {
     text-align: center;
-    text-decoration-color: white
+    
+   
+}
+header#cabecalho h1{
+    color: yellow;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
+
 }
 
+header#cabecalho h5{
+    color: yellow;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.6);
+}
 #imgHeader {
-    width: 80%;
+    width: 100%;
     height: 80%;
     position: absolute;
     padding-left: 5%;
 }
 
-form {
-    margin-block: initial;
+
+nav ul{
+    
+    text-transform: unset;
+    background-color: white;  
+}
+nav li{
+
+   display: inline-block;
+   background-color: #dddddd;
+   padding: 3px; 
+   margin: 4px;
+   transition: background-color 1s;
 }
 
-#tbCadastro {
-    width: 100%;
+nav li:hover {
+    background-color:yellow;
+    color: white;
+    text-decoration: underline;
 }
+
+#mudaImagem{
+    transition: 1s;
+}
+
